# c_ed2_work_init

./: main.c  meson.build
FinalizandoArvoreAVL/: readme.md
FinalizandoArvoreAVL/src/: main.c
FinalizandoArvoreAVL/src/arvoreAVL/: arvore_avl.c
FinalizandoArvoreBB/src/: main.c
question1/: meson.build
question1/src/: main  main.c  main_c  menu.c  menu.h  meson.build  tempCodeRunnerFile.c
question1/src/actions/: actions.c  actions.h  meson.build
question1/src/aluno/: meson.build  struct_aluno.h
question1/src/crud/: meson.build
question1/src/crud/aluno_crud/: aluno_crud.c  aluno_crud.h  meson.build
question1/src/crud/curso_crud/: curso_crud.c  curso_crud.h  meson.build
question1/src/crud/disciplina_crud/: disciplina_crud.c  disciplina_crud.h  meson.build
question1/src/crud/matricula_crud/: matricula_crud.c  matricula_crud.h  meson.build
question1/src/crud/nota_crud/: meson.build  nota_crud.c  nota_crud.h
question1/src/curso/: meson.build  struct_curso.h
question1/src/disciplina/: meson.build
question1/src/matricula/: meson.build
question1/src/menu/: menu.c  menu.h
question1/src/nota/: meson.build  struct_nota.h
question1/src/structs/: struct_aluno.h  struct_curso.h  struct_disciplina.h  struct_matricula.h  struct_nota.h
question1/src/tempos/: aux.c  aux.h  tempos.c  tempos_busca_nota.c  tempos_busca_nota.h  tempos_insercao_curso.c  tempos_insercao_curso.h
question1/src/utils/: meson.build  utils.c  utils.h
question1/src/validacoes/: validacoes.c  validacoes.h
question2/: meson.build  readme.md
question2/src/: main.c
(+78 files in other folders)
