inc_aluno = include_directories('aluno')
inc_curso = include_directories('curso')
inc_disciplina = include_directories('disciplina')
inc_matricula = include_directories('matricula')
inc_nota = include_directories('nota')

subdir('aluno')
subdir('curso')
subdir('disciplina')
subdir('matricula')
subdir('nota')

incs = [
  inc_aluno,
  inc_curso,
  inc_disciplina,
  inc_matricula,
  inc_nota,
]

libs = [
  lib_aluno,
  lib_curso,
  lib_disciplina,
  lib_matricula,
  lib_nota,
]