inc_aluno_crud = include_directories('aluno_crud')
inc_curso_crud = include_directories('curso_crud')
inc_disciplina_crud = include_directories('disciplina_crud')
inc_matricula_crud = include_directories('matricula_crud')
inc_nota_crud = include_directories('nota_crud')

subdir('aluno_crud')
subdir('curso_crud')
subdir('disciplina_crud')
subdir('matricula_crud')
subdir('nota_crud')

inc_crud = [
  inc_aluno_crud,
  inc_curso_crud,
  inc_disciplina_crud,
  inc_matricula_crud,
  inc_nota_crud,
]

lib_crud = [
  lib_aluno_crud,
  lib_curso_crud,
  lib_disciplina_crud,
  lib_matricula_crud,
  lib_nota_crud,
]